<resources>
    <string name="app_name">CaloriePal</string>
    <string name="meal_name_hint">Enter name for meal</string>
    <string name="add_meal_text">Add meal</string>
    <string name="caloric_content_hint">0</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_meal">Add Meal</string>
    <string name="kilogram">Kg</string>
    <string name="set_user_details">Set User Details</string>
    <string name="weight_hint">Weight (Kg)</string>
    <string name="goal_date">Goal Date</string>
    <string name="zero">0</string>
    <string name="starting_weight">Starting Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="starting_weight_kg">Starting Weight (Kg)</string>
    <string name="goal_weight_kg">Goal Weight (Kg)</string>
    <string name="hint_user_name">Enter User Name</string>
    <string name="calories_today">Calories</string>
    <string name="goal_calories">Allowance</string>
    <string name="separator">/</string>
    <string name="save_changes">Save Changes</string>
    <string name="notes">Notes</string>
    <string name="notes_hint">Not sure what the caloric content was? Add some notes here and update the value later!</string>
    <string name="add_image">Add Image</string>
    <string name="select_meal_image">Select Meal Image</string>
    <string name="change_image">Change Image</string>
    <string name="thumbnail_image_of_meal">Thumbnail image of Meal</string>
    <string name="set_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="button_deletes_this_meal">Button Deletes this meal</string>
    <string name="date">Date: </string>
    <string name="user_details">User Details</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="app_logo">App Logo</string>
    <string name="about">About</string>
    <string name="meals">Meals</string>
    <string name="user">User</string>
    <string name="more">More</string>
    <string name="clear_data">Clear Data</string>
    <string name="signed_out">Signed Out</string>
    <string name="please_login">Please Login</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register">Register</string>
    <string name="please_wait_connecting">Please Wait, connecting…</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
</resources>