<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_details"
            android:icon="@drawable/ic_baseline_person_36"
            android:title="@string/user" />
        <item
            android:id="@+id/nav_mealList"
            android:icon="@drawable/ic_baseline_fastfood_36"
            android:title="@string/meals" />

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_36"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
