<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mealNameField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints=""
                    android:hint="@string/meal_name_hint"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/caloricContentField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints=""
                    android:hint="@string/caloric_content_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/notesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes" />

                <EditText
                    android:id="@+id/notesField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes_hint"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:minLines="1"
                    android:paddingHorizontal="8dp" />

                <ImageView
                    android:id="@+id/mealImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="false"
                    android:scaleType="fitCenter"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/buttonAddImage"
                    android:text="@string/add_image"
                    style="@style/ButtonStyle.Wide.Secondary"/>

                <Button
                    android:id="@+id/buttonAddLocation"
                    android:text="@string/set_location"
                    style="@style/ButtonStyle.Wide.Secondary"/>

                <Button
                    android:id="@+id/buttonAddMeal"
                    android:text="@string/add_meal_text"
                    style="@style/ButtonStyle.Wide"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>