<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="#FFC107" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mealNameField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/meal_name_hint"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/caloricContentField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/caloric_content_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/notesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    />

                <EditText
                    android:id="@+id/notesField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:hint="@string/notes_hint"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:maxLines="4"/>
                <Button
                    android:id="@+id/buttonAddMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#973C00"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/add_meal_text"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>