<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mealListConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.caloriepal.activities.MealListActivity">


    <LinearLayout
        android:id="@+id/datebar"
        style="@style/DisplayBarStyle"
        android:weightSum="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dateLabel"
            style="@style/TextStyle.Label"
            android:layout_weight="2"
            android:text="@string/date" />

        <TextView
            android:id="@+id/dateValue"
            style="@style/DisplayBarStyle.Item"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/buttonYesterday"
            style="@style/ButtonStyle.Arrow"
            android:src="@drawable/ic_baseline_arrow_back_36" />

        <ImageView
            android:id="@+id/buttonTomorrow"
            style="@style/ButtonStyle.Arrow"
            android:src="@drawable/ic_baseline_arrow_forward_36" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="0dp"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/caloricGoalHeaders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datebar"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/caloricGoalHeaders"
        style="@style/DisplayBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/mealListConstraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/caloriesTodayLabel"
                style="@style/TextStyle.Label"
                android:layout_weight="1"
                android:text="@string/calories_today" />

            <TextView
                android:id="@+id/caloriesGoalLabel"
                style="@style/TextStyle.Label"
                android:layout_weight="1"
                android:text="@string/goal_calories" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/caloricGoalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/dailyCalorieTotal"
                android:layout_weight="1"
                android:text="@string/zero"
                style="@style/TextStyle.Value"/>

            <TextView
                android:id="@+id/dailyCalorieGoal"
                android:layout_weight="1"
                android:text="@string/zero"
                style="@style/TextStyle.Value"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>