<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mealListConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.caloriepal.activities.MealListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="@id/mealListConstraintLayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mealListToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/datebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/date"
            android:textSize="24sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/dateValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:textSize="16dp"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/buttonYesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_arrow_back_36" />

        <ImageView
            android:id="@+id/buttonTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_arrow_forward_36" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="0dp"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/caloricGoalHeaders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datebar"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/caloricGoalHeaders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/mealListConstraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/caloriesTodayLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="12sp"
                android:text="@string/calories_today"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/caloriesGoalLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingEnd="12sp"
                android:text="@string/goal_calories"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/caloricGoalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/dailyCalorieTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="32sp"
                android:paddingEnd="32sp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/dailyCalorieGoal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="32sp"
                android:paddingEnd="32sp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="32sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>